# MAI

./: .gitignore  README.md
DA/: README.md
DA/da_course_01/: CMakeLists.txt  lzw.cpp  test_gen.py
DA/da_exercise_01/: benchmark.cpp  solution.tar
DA/da_exercise_02/: CMakeLists.txt  TAvl.cpp  TAvl.hpp  TAvlFinal.cpp  TAvlFinal.hpp  generator.py  main.cpp  solution.tar
DA/da_exercise_04/: CMakeLists.txt  benchmark.cpp  bm.cpp  bm.hpp  generator.py  main.cpp  pattern_parse.cpp  pattern_parse.hpp  solution.tar  text_parse.cpp  text_parse.hpp
DA/da_exercise_05/: solution.tar
DA/da_exercise_06/: CMakeLists.txt  benchmark.cpp  bigint.cpp  check.py  solution.tar  test_generator.py
DA/da_exercise_07/: CMakeLists.txt  main.cpp
DA/da_exercise_08/: CMakeLists.txt
LP/: README.md
LP/lp_exercise_01/: REPORT.md  task1.pl  task2.pl
LP/lp_exercise_02/: REPORT.md  solution.pl
LP/lp_exercise_03/: README.md  REPORT.md  solution.pl
LP/lp_exercise_04/: README.md  REPORT.md  task.pl
LP/lp_kp_01/: Essay.md  README.md  REPORT.md  help_file.py  instruction.txt  parser.pl  res.pl  tree.ged
NI/: README.md
NI/ni_exercise_01/: model.py  run.py
NI/ni_exercise_02/: model.py  run.py
NI/ni_exercise_05/: NeuroInfo5.ipynb
NI/ni_exercise_06/: NeuroInfo6.ipynb
NI/ni_exercise_07/: NeuroInfo7.ipynb
NI/ni_exercise_08/: NeuroInfo8.ipynb
OOP/: README.md
OS/: README.md
PGP/: README.md  gpu_info.cu
PGP/pgp_course_01/: convert.sh  converter.py  cpu.txt  create_gif.py  full_convert.sh  gif.sh  gpu.txt  render.cu  render.sh
PGP/pgp_exercise_01/: cpu.cu  gpu.cu  pishchik-evgenii.docx
PGP/pgp_exercise_02/: converter.py  cpu.cu  gpu.cu  pishchik-evgenii.docx
PGP/pgp_exercise_03/: converter.py  cpu.cu  create_test.py  gen_test.py  gpu.cu  pishchik-evgenii.docx
PGP/pgp_exercise_04/: autotest.sh  check_tests.py  cpu.cu  cpu_time.sh  debug.py  generate_tests.py  (+4 more)
SAC/: README.md
SP/: README.md
SP/sp_course_01/: CMakeLists.txt  Make-code-gen.cpp  base-compiler.cpp  code-gen.cpp  coin21.cpp  golden21.cpp  mlisp.h  zeller.cpp  zeller.ss
(+49 files in other folders)
