cmake_minimum_required(VERSION 3.5)
project(da_exercise_06)
add_executable(da_exercise_06 main.cpp bigint.cpp)
set_target_properties(da_exercise_06 PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
add_executable(da_benchmark_06 benchmark.cpp bigint.cpp)
set_target_properties(da_benchmark_06 PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
