cmake_minimum_required(VERSION 3.5)
project(sp_course_01)
add_executable(MakeCodeGen Make-code-gen.cpp)
set_target_properties(MakeCodeGen PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
add_executable(MLispGen Mlispgen.cpp)
set_target_properties(MLispGen PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
add_executable(zeller zeller.cpp)
set_target_properties(zeller PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
add_executable(golden21 golden21.cpp)
set_target_properties(golden21 PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
add_executable(coin21 coin21.cpp)
set_target_properties(coin21 PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
